Added tests for enforce-ip-family value for Mono runtime, changed default value for it in default configuration

--- a/src/core/Akka.Remote/Configuration/Remote.conf
+++ b/src/core/Akka.Remote/Configuration/Remote.conf
@@ -357,7 +357,7 @@ akka {
 	  # for them we will need enforce-ip-family = true, and for Azure dns-use-ipv6 = false
 	  # if property is missed from config, it will be set to true if Mono runtime is presented
 
-	  enforce-ip-family = false
+	  enforce-ip-family = ""
 
       # Enables SSL support on this transport
       enable-ssl = false
